@@ -22,6 +22,7 @@ import (
 	"fmt"
 
 	"github.com/elastic/beats/libbeat/common"
+	"github.com/elastic/beats/libbeat/logp"
 	"github.com/elastic/beats/libbeat/monitoring/report"
 	esout "github.com/elastic/beats/libbeat/outputs/elasticsearch"
 	"github.com/elastic/beats/libbeat/publisher"
@@ -38,7 +39,6 @@ var (
 	actMonitoringBeats = common.MapStr{
 		"index": common.MapStr{
 			"_index":   "",
-			"_type":    "beats_stats",
 			"_routing": nil,
 		},
 	}
@@ -96,23 +96,57 @@ func (c *publishClient) Close() error {
 
 func (c *publishClient) Publish(batch publisher.Batch) error {
 	events := batch.Events()
-	bulk := make([]interface{}, 0, 2*len(events))
+	var failed []publisher.Event
+	var reason error
 	for _, event := range events {
-		bulk = append(bulk,
-			actMonitoringBeats, report.Event{
+
+		// Extract time
+		t, err := event.Content.Meta.GetValue("type")
+		if err != nil {
+			logp.Err("Type not available in monitoring reported. Please report this error: %s", err)
+			continue
+		}
+
+		var params = map[string]string{}
+		// Copy params
+		for k, v := range c.params {
+			params[k] = v
+		}
+		// Extract potential additional params
+		p, err := event.Content.Meta.GetValue("params")
+		if err == nil {
+			p2, ok := p.(map[string]string)
+			if ok {
+				for k, v := range p2 {
+					params[k] = v
+				}
+			}
+		}
+		actMonitoringBeats.Put("index._type", t)
+
+		bulk := [2]interface{}{
+			actMonitoringBeats,
+			report.Event{
 				Timestamp: event.Content.Timestamp,
 				Fields:    event.Content.Fields,
-			})
+			},
+		}
+
+		// Currently one request per event is sent. Reason is that each event can contain different
+		// interval params and X-Pack requires to send the interval param.
+		_, err = c.es.BulkWith("_xpack", "monitoring", params, nil, bulk[:])
+		if err != nil {
+			failed = append(failed, event)
+			reason = err
+		}
 	}
 
-	_, err := c.es.BulkWith("_xpack", "monitoring", c.params, nil, bulk)
-	if err != nil {
-		batch.Retry()
-		return err
+	if len(failed) > 0 {
+		batch.RetryEvents(failed)
+	} else {
+		batch.ACK()
 	}
-
-	batch.ACK()
-	return nil
+	return reason
 }
 
 func (c *publishClient) Test(d testing.Driver) {
