@@ -22,10 +22,11 @@ import "strings"
 // FlatSnapshot represents a flatten snapshot of all metrics.
 // Names in the tree will be joined with `.` .
 type FlatSnapshot struct {
-	Bools   map[string]bool
-	Ints    map[string]int64
-	Floats  map[string]float64
-	Strings map[string]string
+	Bools        map[string]bool
+	Ints         map[string]int64
+	Floats       map[string]float64
+	Strings      map[string]string
+	StringSlices map[string][]string
 }
 
 type flatSnapshotVisitor struct {
@@ -68,10 +69,11 @@ func CollectFlatSnapshot(r *Registry, mode Mode, expvar bool) FlatSnapshot {
 
 func MakeFlatSnapshot() FlatSnapshot {
 	return FlatSnapshot{
-		Bools:   map[string]bool{},
-		Ints:    map[string]int64{},
-		Floats:  map[string]float64{},
-		Strings: map[string]string{},
+		Bools:        map[string]bool{},
+		Ints:         map[string]int64{},
+		Floats:       map[string]float64{},
+		Strings:      map[string]string{},
+		StringSlices: map[string][]string{},
 	}
 }
 
@@ -142,6 +144,10 @@ func (vs *flatSnapshotVisitor) OnFloat(f float64) {
 	vs.snapshot.Floats[vs.getName()] = f
 }
 
+func (vs *flatSnapshotVisitor) OnStringSlice(f []string) {
+	vs.snapshot.StringSlices[vs.getName()] = f
+}
+
 func newStructSnapshotVisitor() *structSnapshotVisitor {
 	vs := &structSnapshotVisitor{}
 	vs.key.stack = vs.key.stack0[:0]
@@ -179,6 +185,11 @@ func (s *structSnapshotVisitor) OnString(str string) { s.setValue(str) }
 func (s *structSnapshotVisitor) OnBool(b bool)       { s.setValue(b) }
 func (s *structSnapshotVisitor) OnInt(i int64)       { s.setValue(i) }
 func (s *structSnapshotVisitor) OnFloat(f float64)   { s.setValue(f) }
+func (s *structSnapshotVisitor) OnStringSlice(f []string) {
+	c := make([]string, len(f))
+	copy(c, f)
+	s.setValue(c)
+}
 
 func (s *structSnapshotVisitor) setValue(v interface{}) {
 	if s.event.current == nil {
